# Codigo/api/router/clients.js
@@ -1,25 +1,23 @@
 const express = require("express");
 const clientsRepo = require("../repository/clients-repository");
-const clientValidator = require("../validators/client-validator"); 
+const clientValidator = require("../validators/client-validator");
 
 const router = express.Router();
 
 router.post("/", async (req, res) => {
-  // Validação dos dados de criação do cliente
   const { error } = clientValidator.CreateClient(req.body);
   if (error) {
     return res.status(400).json({ error: error.details[0].message });
   }
 
-  const { name, email, address, phone } = req.body;
-  const clientCreate = { name, email, address, phone };
+  const { cpf, name, email, address, phone } = req.body;
+  const clientCreate = { cpf, name, email, address, phone };
   const result = await clientsRepo.createClient(clientCreate);
 
   res.header("Location", req.originalUrl + "/" + result.id).status(201).json(result);
 });
 
 router.get("/", async (req, res) => {
-  // Validação dos parâmetros de paginação
   const { error } = clientValidator.GetClients(req);
   if (error) {
     return res.status(400).json({ error: error.details[0].message });
@@ -41,6 +39,18 @@ router.get("/:id", async (req, res) => {
   res.status(200).json(client);
 });
 
+router.get("/cpf/:cpf", async (req, res) => {
+  const { cpf } = req.params;
+  const client = await clientsRepo.getClientByCpf(cpf);
+
+  if (!client) {
+    res.status(404).json({ error: "Client not found" });
+    return;
+  }
+
+  res.status(200).json(client);
+});
+
 router.put("/:id", async (req, res) => {
   // Validação dos dados de atualização do cliente
   const { error } = clientValidator.UpdateClient(req.body);
@@ -49,9 +59,9 @@ router.put("/:id", async (req, res) => {
   }
 
   const { id } = req.params;
-  const { name, email, address, phone } = req.body;
+  const { cpf, name, email, address, phone } = req.body;
 
-  const clientUpdate = { name, email, address, phone };
+  const clientUpdate = { cpf, name, email, address, phone };
 
   try {
     await clientsRepo.updateClient(id, clientUpdate);
