# Codigo/api/swagger.yaml
@@ -131,12 +131,15 @@ paths:
           description: Número da página para paginação
           schema:
             type: integer
+            minimum: 1
         - name: quantidade
           in: query
           required: false
-          description: Quantidade de registros por página
+          description: Quantidade de registros por página (máx. 20)
           schema:
             type: integer
+            minimum: 1
+            maximum: 20
       responses:
         "200":
           description: Sucesso, retorna uma lista de clientes
@@ -213,12 +216,8 @@ paths:
             schema:
               $ref: "#/components/schemas/ClientUpdate"
       responses:
-        "200":
-          description: Sucesso, retorna o cliente atualizado
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Client"
+        "204":
+          description: Sucesso, sem conteúdo
         "404":
           $ref: "#/components/responses/NotFoundResponse"
     delete:
@@ -271,6 +270,9 @@ components:
       properties:
         id:
           type: integer
+        cpf:
+          type: string
+          description: CPF do cliente
         name:
           type: string
         email:
@@ -283,6 +285,9 @@ components:
     ClientCreate:
       type: object
       properties:
+        cpf:
+          type: string
+          description: CPF do cliente
         name:
           type: string
         email:
@@ -292,10 +297,20 @@ components:
         phone:
           type: string
 
-
     ClientUpdate:
-      allOf:
-        - $ref: "#/components/schemas/ClientCreate"
+      type: object
+      properties:
+        cpf:
+          type: string
+          description: CPF do cliente
+        name:
+          type: string
+        email:
+          type: string
+        address:
+          type: string
+        phone:
+          type: string
 
     ApiError:
       type: object
